tests/NormalTests/paczka1/small_fuzzy/11582652.err
Error in line 1: sjK3Zj7M A929 9,2
Error in line 5: sjK3Zj7M A62 69,2
Error in line 2: x2eWaCRw S193 8,8
Error in line 7: sjK3Zj7M A929 86,9
Error in line 4: 7cbZvjCH A62 65,9
